...
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="12dp"
              android:background="@drawable/author_item_bg"
>
    <LinearLayout
            android:id="@+id/FlipContainer"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            >

        <LinearLayout
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <TextView
                    android:id="@+id/bookTitle"
                    android:layout_weight="10"
                    android:width="0dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorText"
                    android:text="Some book title here"
...
